Updated favorite games list

--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -36,7 +36,7 @@
                 JavaScript.</p>
             <p>Video games have been a massive part of my life but I hardly ever play them anymore and I want to get
                 back into them! Some of my all-time favorites include Minecraft (of course), Factorio,
-                Terraria, Team Fortress 2, Overwatch, and <a href="articles/favorite_games.html" class="white-link">more</a>.</p>
+                Terraria, Team Fortress 2, Overwatch, the Ace Attorney series, and <a href="articles/favorite_games.html" class="white-link">more</a>.</p>
             <p>I am chronically addicted to music. I love playing, producing, and listening to music. I've loved a
                 variety of genres over the years but right now I am most fixated on Dubstep and EDM in general.</p>
             <p>he/him</p>
