Added ids to each project in the project articles

--- a/templates/articles/projects.html.jinja
+++ b/templates/articles/projects.html.jinja
@@ -26,12 +26,12 @@
         <br>
         <hr>
 
-        <h2 class="article-subsection">recommends</h2>
+        <h2 class="article-subsection" id="recommends">recommends</h2>
         <h3 class="article-subtitle">25 December 2021 - 4 January 2022</h3>
         <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, Jinja, SQLite, PyNaCl</h3>
         <img src="../images/projects/recommends.png" class="article-image-intext" style="width: 40%;"
             alt="A user's page on recommends">
-        <p>A social-media-I-guess-kinda-not-really site where users can recommend books, movies, etc. to their friends.
+        <p>A social media site where users can recommend books, movies, etc. to their friends.
             <a href="https://prydt.xyz/">prydt</a> and I made this in a couple days using Flask, Jinja, SQLite, PyNaCl,
             and the usual HTML/CSS/JavaScript shebang. I mainly worked on the frontend and pry worked on the login and
             database stuff. Overall, I'm pretty happy with how this turned out. It's quite minimal, but I feel like it
@@ -40,7 +40,7 @@
         <p><a href="https://github.com/prydt/recommends">recommends on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">overthere</h2>
+        <h2 class="article-subsection" id="overthere">overthere</h2>
         <h3 class="article-subtitle">19 December - 24 December 2021</h3>
         <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, SQLite</h3>
         <img src="../images/projects/overthere.png" class="article-image-intext" style="width: 40%;"
@@ -54,11 +54,11 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/overthere">overthere on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">Supremely_Hexagonal</h2>
+        <h2 class="article-subsection" id="Supremely_Hexagonal">Supremely_Hexagonal</h2>
         <h3 class="article-subtitle">28 October - 1 November 2021</h3>
         <h3 class="article-subtitle">Java - Processing</h3>
-        <img src="../images/projects/supremely_hexagonal.png" class="article-image-intext" style="width: 40%;"
-            alt="A screenshot from Supremely Hexagonal">
+        <img src="../images/projects/supremely_hexagonal_gameplay.gif" class="article-image-intext" style="width: 40%;"
+            alt="Gameplay from Supremely Hexagonal">
         <p>Supremely_Hexagonal is a simplistic remake of <a href="https://superhexagon.com/">Super Hexagon</a> by Terry
             Cavanagh in
             Processing. I actually make
@@ -78,7 +78,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Supremely_Hexagonal">Supremely_Hexagonal on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">Peekaboo</h2>
+        <h2 class="article-subsection" id="Peekaboo">Peekaboo</h2>
         <h3 class="article-subtitle">1 October - 21 October 2021</h3>
         <h3 class="article-subtitle">Java</h3>
         <p>Another short and sweet one. Peekaboo lets you take screenshots from the terminal using Java's Robot class.
@@ -86,7 +86,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Peekaboo">Peekaboo on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">VEGAS Scripts/Plugins</h2>
+        <h2 class="article-subsection" id="VEGAS Scripts/Plugins">VEGAS Scripts/Plugins</h2>
         <h3 class="article-subtitle">26 July - 16 August 2021</h3>
         <h3 class="article-subtitle">C# - Windows Forms, VEGAS Pro Script API</h3>
         <img src="../images/projects/oscillator_randomizer_gui.png" class="article-image-intext" style="width: 40%;"
@@ -120,7 +120,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Vegas-Scripts#readme">VEGAS_Scripts on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">nitroguy10.github.io</h2>
+        <h2 class="article-subsection" id="nitroguy10.github.io">nitroguy10.github.io</h2>
         <h3 class="article-subtitle">11 December 2016 - Ongoing</h3>
         <h3 class="article-subtitle">Python, HTML, Sass, JavaScript - Jinja, JSON</h3>
         <p>Hey, it's the website you're on right now! The way this site was created is actually pretty complicated and
@@ -128,7 +128,7 @@
         <p><a href=about_website.html>How This Website Was Made, A Story</a></p>
         <hr>
 
-        <h2 class="article-subsection">ERS-OL</h2>
+        <h2 class="article-subsection" id="ERS-OL">ERS-OL</h2>
         <h3 class="article-subtitle">24 June - 3 July 2021</h3>
         <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, Socket.io</h3>
         <img src="../images/projects/ers-ol.png" class="article-image-intext" style="width: 40%;"
@@ -156,7 +156,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">ERS-OL on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">ColorSplitter</h2>
+        <h2 class="article-subsection" id="ColorSplitter">ColorSplitter</h2>
         <h3 class="article-subtitle">28 June - 29 June 2021</h3>
         <h3 class="article-subtitle">Java - Swing</h3>
         <img src="../images/projects/colorsplitter.png" class="article-image-intext" style="width: 40%;"
@@ -171,7 +171,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/ColorSplitter">ColorSplitter on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">DocLCD</h2>
+        <h2 class="article-subsection" id="DocLCD">DocLCD</h2>
         <h3 class="article-subtitle">2 June - 4 June 2021</h3>
         <h3 class="article-subtitle">Python, Arduino - PySerial, Pygame</h3>
         <p>
@@ -183,7 +183,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/DocLCD">DocLCD on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">TimeRefresher</h2>
+        <h2 class="article-subsection" id="TimeRefresher">TimeRefresher</h2>
         <h3 class="article-subtitle">2 June 2021</h3>
         <h3 class="article-subtitle">Java - Swing</h3>
         <img src="../images/projects/timerefresher.png" class="article-image-intext" style="width: 40%;"
@@ -196,7 +196,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/TimeRefresher">TimeRefresher on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">RoundUp</h2>
+        <h2 class="article-subsection" id="RoundUp">RoundUp</h2>
         <h3 class="article-subtitle">7 May - 23 May 2021</h3>
         <h3 class="article-subtitle">Python</h3>
         <img src="../images/projects/roundup_visual.png" class="article-image-intext" style="width: 40%;"
@@ -211,7 +211,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/RoundUp">RoundUp on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">tuscon</h2>
+        <h2 class="article-subsection" id="tuscon">tuscon</h2>
         <h3 class="article-subtitle">21 March - 9 April 2021</h3>
         <h3 class="article-subtitle">Python - BeautifulSoup</h3>
         <p>
@@ -223,7 +223,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/tuscon">tuscon on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">Pi555</h2>
+        <h2 class="article-subsection" id="Pi555">Pi555</h2>
         <h3 class="article-subtitle">ca. 2016 - 22 December 2019</h3>
         <h3 class="article-subtitle">Java - MIDICSV, Pi4J, Raspberry Pi GPIO</h3>
         <p>
@@ -250,7 +250,7 @@
         <p>And... yeah. It worked. And it was awesome. I really wish I had something else to show you here. Sorry!</p>
         <hr>
 
-        <h2 class="article-subsection">ClickType</h2>
+        <h2 class="article-subsection" id="ClickType">ClickType</h2>
         <h3 class="article-subtitle">6 May - 8 May 2019</h3>
         <h3 class="article-subtitle">HTML, CSS, JavaScript</h3>
         <p>
@@ -262,7 +262,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/ClickType">ClickType on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">ResistorTool</h2>
+        <h2 class="article-subsection" id="ResistorTool">ResistorTool</h2>
         <h3 class="article-subtitle">5 August 2018</h3>
         <h3 class="article-subtitle">HTML, CSS, JavaScript - Bootstrap</h3>
         <p>
@@ -274,7 +274,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/ResistorTool">ResistorTool on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">RoboPlato 2000</h2>
+        <h2 class="article-subsection" id="RoboPlato 2000">RoboPlato 2000</h2>
         <h3 class="article-subtitle">ca. January 2018</h3>
         <p>That time I trained a <a href="https://github.com/karpathy/char-rnn"> character-based recurrent neural
                 network</a> on Plato's works.</p>
@@ -286,7 +286,7 @@
         <p><a href="roboplato.html">The Essential Wisdom of RoboPlato 2000</a></p>
         <hr>
 
-        <h2 class="article-subsection">Jumpy</h2>
+        <h2 class="article-subsection" id="Jumpy">Jumpy</h2>
         <h3 class="article-subtitle">17 April 2017 - 4 December 2018</h3>
         <h3 class="article-subtitle">HTML, CSS, JavaScript</h3>
         <a href="{{ site.nitroguy.socials.website.link }}/Jumpy"><img src="../gifs/jumpy.gif"
@@ -313,7 +313,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Jumpy">Jumpy on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">Dodge3</h2>
+        <h2 class="article-subsection" id="Dodge3">Dodge3</h2>
         <h3 class="article-subtitle">18 March - 15 June 2017</h3>
         <h3 class="article-subtitle">HTML, CSS, JavaScript</h3>
         <a href="{{ site.nitroguy.socials.website.link }}/Dodge3"><img src="../gifs/dodge3.gif"
@@ -332,7 +332,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Dodge3">Dodge3 on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">CalcGames</h2>
+        <h2 class="article-subsection" id="CalcGames">CalcGames</h2>
         <h3 class="article-subtitle">5 January - 11 July 2017</h3>
         <h3 class="article-subtitle">TI-Basic</h3>
         <img src="../gifs/serpent.gif" class="article-image-intext" style="width: 20%;" alt="A gif of Serpent gameplay">
