--- a/templates/portfolio.html.jinja
+++ b/templates/portfolio.html.jinja
@@ -31,7 +31,7 @@
         <br>
         <hr>
 
-        <h2 class="article-subsection">recommends</h2>
+        <h2 class="article-subsection" id="recommends">recommends</h2>
         <img src="./images/projects/recommends.png" class="article-image-intext" style="width: 40%;"
             alt="A user's page on recommends">
         <h3 class="article-subtitle">25 December 2021 - 4 January 2022</h3>
@@ -44,7 +44,7 @@
         <p><a href="https://github.com/prydt/recommends">recommends on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">overthere</h2>
+        <h2 class="article-subsection" id="overthere">overthere</h2>
         <img src="./images/projects/overthere.png" class="article-image-intext" style="width: 40%;"
             alt="The interface of overthere">
         <h3 class="article-subtitle">19 December - 24 December 2021</h3>
@@ -55,7 +55,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/overthere">overthere on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">Supremely_Hexagonal</h2>
+        <h2 class="article-subsection" id="Supremely_Hexagonal">Supremely_Hexagonal</h2>
         <img src="./images/projects/supremely_hexagonal.png" class="article-image-intext" style="width: 20%;"
             alt="A screenshot from Supremely Hexagonal">
         <h3 class="article-subtitle">28 October - 1 November 2021</h3>
@@ -67,7 +67,7 @@
         <hr>
 
 
-        <h2 class="article-subsection">VEGAS Scripts/Plugins</h2>
+        <h2 class="article-subsection" id="VEGAS Scripts/Plugins">VEGAS Scripts/Plugins</h2>
         <img src="./images/projects/oscillator_randomizer_gui.png" class="article-image-intext" style="width: 40%;"
             alt="The GUI of my plugin VEGAS_Oscillator_Randomizer">
         <h3 class="article-subtitle">26 July - 16 August 2021</h3>
@@ -81,7 +81,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Vegas-Scripts#readme">VEGAS_Scripts on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">nitroguy10.github.io</h2>
+        <h2 class="article-subsection" id="nitroguy10.github.io">nitroguy10.github.io</h2>
         <h3 class="article-subtitle">11 December 2016 - Ongoing</h3>
         <h3 class="article-subtitle">Python, HTML, Sass, JavaScript - Jinja, JSON</h3>
         <p>My website is my oldest still-ongoing project. What makes it unique is that, as a music producer, I want a
@@ -97,7 +97,7 @@
         <p><a href=index.html>nitroguy10.github.io</a></p>
         <hr>
 
-        <h2 class="article-subsection">ERS-OL</h2>
+        <h2 class="article-subsection" id="ERS-OL">ERS-OL</h2>
         <img src="./images/projects/ers-ol.png" class="article-image-intext" style="width: 30%;"
             alt="Egyptian Rat Screw Online">
         <h3 class="article-subtitle">24 June - 3 July 2021</h3>
@@ -111,7 +111,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">ERS-OL on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">RoundUp</h2>
+        <h2 class="article-subsection" id="RoundUp">RoundUp</h2>
         <img src="./images/projects/roundup_visual.png" class="article-image-intext" style="width: 30%;"
             alt="A visual of what RoundUp does">
         <h3 class="article-subtitle">7 May - 23 May 2021</h3>
@@ -127,7 +127,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/RoundUp">RoundUp on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">tuscon</h2>
+        <h2 class="article-subsection" id="tuscon">tuscon</h2>
         <h3 class="article-subtitle">21 March - 9 April 2021</h3>
         <h3 class="article-subtitle">Python - BeautifulSoup</h3>
         <p>
@@ -138,7 +138,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/tuscon">tuscon on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">Pi555</h2>
+        <h2 class="article-subsection" id="Pi555">Pi555</h2>
         <h3 class="article-subtitle">ca. 2016 - 22 December 2019</h3>
         <h3 class="article-subtitle">Java - MIDICSV, Pi4J, Raspberry Pi GPIO</h3>
         <p>
@@ -153,7 +153,7 @@
         </p>
         <hr>
 
-        <h2 class="article-subsection">Jumpy</h2>
+        <h2 class="article-subsection" id="Jumpy">Jumpy</h2>
         <img src="./gifs/jumpy.gif"
             class="article-image-intext" style="width: 40%;" alt="A gif of Jumpy gameplay">
         <h3 class="article-subtitle">17 April 2017 - 4 December 2018</h3>
@@ -169,7 +169,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Jumpy">Jumpy on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">CalcGames</h2>
+        <h2 class="article-subsection" id="CalcGames">CalcGames</h2>
         <img src="./gifs/serpent.gif" class="article-image-intext" style="width: 18%;" alt="A gif of Serpent gameplay">
         <img src="./gifs/matrix.gif" class="article-image-intext" style="width: 18%;"
             alt="A gif of Matrix Racer gameplay">
@@ -182,7 +182,7 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/CalcGames">CalcGames on GitHub</a></p>
         <hr>
 
-        <h2 class="article-subsection">The Sass</h2>
+        <h2 class="article-subsection" id="The Sass">The Sass</h2>
         <img src="./artwork/sass_tiny.png" class="article-image-intext" style="width: 20%;"
             alt="A visual of what RoundUp does">
         <p>
