Made all "NitroGuy" headers into links to the homepage

--- a/docs/stylesheets/main_sass.css
+++ b/docs/stylesheets/main_sass.css
@@ -81,6 +81,10 @@ a:link, a:visited {
 a.white-link {
   color: inherit;
 }
+a.unformatted-link {
+  color: inherit;
+  text-decoration: none;
+}
 
 .download {
   font-size: 30px;
