--- a/sass/main.sass
+++ b/sass/main.sass
@@ -119,6 +119,10 @@ a
 
     &.white-link
         color: inherit
+    
+    &.unformatted-link
+        color: inherit
+        text-decoration: none
 
 .download
     font-size: 30px
