--- a/templates/collection.html.jinja
+++ b/templates/collection.html.jinja
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1 class="music-name">The Sass</h1>
+    <h1 class="music-name"><a href="/#music" class="unformatted-link">The Sass</a></h1>
     <p>
         <noscript><a href="../index.html#music"></noscript><button
             onclick="window.location.href = '../index.html#music'">Back to Site</button><noscript></a></noscript>
