--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -12,7 +12,7 @@
 </head>
 
 <body onload="start(); window.scrollTo(0, 0)">
-    <h1>NitroGuy</h1>
+    <h1><a href="/" class="unformatted-link">NitroGuy</a></h1>
     <p>
         <noscript><a href="#about"></noscript><button onclick="openTab(0)"
             id="aboutNavButton">About</button><noscript></a></noscript>
