--- a/templates/song.html.jinja
+++ b/templates/song.html.jinja
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1 class="music-name">The Sass</h1>
+    <h1 class="music-name"><a href="/#music" class="unformatted-link">The Sass</a></h1>
     <div id="content" class="music-page">
         <div id="eachTrack">
             <table id="songList" class="song-table">
