--- a/templates/articles/about_website.html.jinja
+++ b/templates/articles/about_website.html.jinja
@@ -12,7 +12,7 @@
 </head>
 
 <body id="article">
-    <h1>NitroGuy</h1>
+    <h1><a href="/" class="unformatted-link">NitroGuy</a></h1>
 
     <div id="content">
         <h2 id="article-title">How This Website Was Made, A Story</h2>
