--- a/templates/portfolio.html.jinja
+++ b/templates/portfolio.html.jinja
@@ -12,7 +12,7 @@
 </head>
 
 <body id="article">
-    <h1>NitroGuy</h1>
+    <h1><a href="/" class="unformatted-link">NitroGuy</a></h1>
 
     <div id="portfolio" class="formal-font">
         <h2 id="article-title">Portfolio</h2>
