Fixed some wacky CSS

--- a/docs/stylesheets/main_sass.css
+++ b/docs/stylesheets/main_sass.css
@@ -304,7 +304,7 @@ button.current {
   }
 
   .item-name-large {
-    font-size: 8vw;
+    font-size: 6vw;
   }
 
   .single-text {
@@ -335,7 +335,11 @@ button.current {
   }
 
   ul.song-bullets {
-    font-size: 5vw;
+    font-size: 4vw;
+  }
+
+  ul#projects-list {
+    font-size: 4vw;
   }
 
   ol {
