--- a/sass/main.sass
+++ b/sass/main.sass
@@ -177,7 +177,7 @@ a
         font-size: 4vw
 
     .item-name-large
-        font-size: 8vw
+        font-size: 6vw
 
     .single-text
         font-size: 5vw
@@ -219,7 +219,10 @@ ol
 
 @mixin m-lists
     ul.song-bullets
-        font-size: 5vw
+        font-size: 4vw
+    
+    ul#projects-list
+        font-size: 4vw
 
     ol
         font-size: 3.5vw
