--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -108,7 +108,7 @@
     <noscript>
         <hr class="noscript-hr">
     </noscript>
-    <div id="other">
+    <div id="projects">
         <noscript>
             <h2 class="noscript-heading">Projects</h2>
         </noscript>
