--- a/sass/main.sass
+++ b/sass/main.sass
@@ -79,7 +79,8 @@ h4
         line-height: 22vw
 
         &.long-name
-            font-size: 17vw
+            font-size: 9vw
+            line-height: 17vw
 
         &.music-name
             font-size: 14vw
