Added other "socials" (which have no links yet)

--- a/templates/links.html.jinja
+++ b/templates/links.html.jinja
@@ -24,6 +24,10 @@
                         href="{{ site.nitroguy.socials.soundcloud.link }}" class="table-links">SoundCloud</a>
                 </p>
                 <hr>
+                <p class="table-links"><img src="{{ site.nitroguy.socials.spotify.icon }}" width="32" height="32"><a
+                    href="{{ site.nitroguy.socials.spotify.link }}" class="table-links">Spotify</a>
+                </p>
+                <hr>
                 <p class="table-links"><img src="{{ site.nitroguy.socials.github.icon }}" width="32" height="32"><a
                         href="{{ site.nitroguy.socials.github.link }}" class="table-links">GitHub</a>
                 </p>
@@ -34,9 +38,6 @@
                 <p class="table-links"><img src="{{ site.nitroguy.socials.musicTwitter.icon }}" width="32" height="32"><a
                         href="{{ site.nitroguy.socials.musicTwitter.link }}" class="table-links">"The Sass" Twitter</a>
                     <hr>
-                <p class="table-links"><img src="{{ site.nitroguy.socials.newgrounds.icon }}" width="32" height="32"><a
-                        href="{{ site.nitroguy.socials.newgrounds.link }}" class="table-links">Newgrounds</a>
-                    <hr>
                 <p class="table-links"><a href="index.html" class="table-links">Website</a>
                 </p>
                 <hr>
@@ -44,7 +45,7 @@
             </td>
         </table>
     </div>
-    <footer id="copyright">&copy; 2021 NitroGuy</footer>
+    <footer id="copyright">&copy; 2022 NitroGuy</footer>
 </body>
 
 </html>
