--- a/templates/components/footer.html.jinja
+++ b/templates/components/footer.html.jinja
@@ -3,14 +3,14 @@
                         height="32px" width="32px" title="YouTube" alt="YouTube" class="social-icon"></a>
         <a href="{{ nitroguy.socials.soundcloud.link }}"><img src="{{ path }}{{ nitroguy.socials.soundcloud.icon }}"
                         height="32px" width="32px" title="SoundCloud" alt="SoundCloud" class="social-icon"></a>
+        <a href="{{ nitroguy.socials.spotify.link }}"><img src="{{ path }}{{ nitroguy.socials.spotify.icon }}"
+            height="32px" width="32px" title="Spotify" alt="Spotify" class="social-icon"></a>
         <a href="{{ nitroguy.socials.github.link }}"><img src="{{ path }}{{ nitroguy.socials.github.icon }}"
                         height="32px" width="32px" title="GitHub" alt="GitHub" class="social-icon"></a>
         <a href="{{ nitroguy.socials.twitter.link }}"><img src="{{ path }}{{ nitroguy.socials.twitter.icon }}"
                         height="32px" width="32px" title="Twitter" alt="Twitter" class="social-icon"></a>
         <a href="{{ nitroguy.socials.musicTwitter.link }}"><img src="{{ path }}{{ nitroguy.socials.musicTwitter.icon }}"
             height="32px" width="32px" title='"The Sass" Twitter' alt='"The Sass" Twitter' class="social-icon"></a>
-        <a href="{{ nitroguy.socials.newgrounds.link }}"><img src="{{ path }}{{ nitroguy.socials.newgrounds.icon }}"
-                        height="32px" width="32px" title="Newgrounds" alt="Newgrounds" class="social-icon"></a>
         <div id="email" title="E-Mail">{{ nitroguy.socials.email.address }}</div>
     </footer>
     <footer id="copyright">&copy; 2022 NitroGuy</footer>
