Added new streaming links to song and collection pages

--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -29,16 +29,15 @@
             <p>Hi there!</p>
             <p>I'm NitroGuy. Currently, I am a human who lives on Earth. My hobbies include programming, producing
                 music, editing videos, playing video games, and sleeping.</p>
-            <p>I am highly interested in computer science and software development. Java is
-                without a doubt my best language and the language I have spent the most time with. I have
-                also been using Python to great extent as of late and I really
-                enjoy coding in it. I've also had a great amount of experience working with HTML, CSS, and
-                JavaScript.</p>
+            <p>I am highly interested in computer science and software development. I would call myself a "full-stack
+                web developer" as of now but I am very eager to explore other facets of computer science. I am
+                proficient in Java, Python, HTML, CSS, JavaScript, C++, and C#.</p>
             <p>Video games have been a massive part of my life but I hardly ever play them anymore and I want to get
                 back into them! Some of my all-time favorites include Minecraft (of course), Factorio,
-                Terraria, Team Fortress 2, Overwatch, the Ace Attorney series, and <a href="articles/favorite_games.html" class="white-link">more</a>.</p>
+                Terraria, Team Fortress 2, Overwatch, the Ace Attorney series, Stardew Valley and <a
+                    href="articles/favorite_games.html" class="white-link">more</a>.</p>
             <p>I am chronically addicted to music. I love playing, producing, and listening to music. I've loved a
-                variety of genres over the years but right now I am most fixated on Dubstep and EDM in general.</p>
+                variety of genres over the years but right now I am most fixated on dubstep and EDM in general.</p>
             <p>he/him</p>
         </div>
         <noscript>
@@ -53,8 +52,8 @@
                 a journey. It's also chock-full of lead solos and major 7s lol.</p>
             <p>If you wanna have a listen, check me out on <a
                     href="{{ site.nitroguy.socials.youtube.link }}">YouTube</a>, <a
-                    href="{{ site.nitroguy.socials.soundcloud.link }}">SoundCloud</a>, or even <a
-                    href="{{ site.nitroguy.socials.newgrounds.link }}">Newgrounds</a>.</p>
+                    href="{{ site.nitroguy.socials.soundcloud.link }}">SoundCloud</a>, and <a
+                    href="{{ site.nitroguy.socials.spotify.link }}">Spotify</a>.</p>
             <p>Or, if you'd prefer, read about story behind each of my tracks (and download them too).</p>
             <noscript>
                 <div class="scroll-table">
@@ -119,7 +118,8 @@
         <ul id="projects-list">
             <li><a href="{{ site.nitroguy.socials.github.link }}/Vegas-Scripts">Plugins/Scripts for VEGAS Pro</a></li>
             <li><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">Online Egyptian Rat Screw game</a></li>
-            <li><a href="articles/about_website.html">How this website was made</a> (it's more complex than you might think!)</li>
+            <li><a href="articles/about_website.html">How this website was made</a> (it's more complex than you might
+                think!)</li>
         </ul>
     </div>
     </div>
